--- a/NetflixSerije/netflix-serije/src/main/resources/application.properties
+++ b/NetflixSerije/netflix-serije/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix=.jsp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/serijeprojekat
 spring.datasource.username=root
-spring.datasource.password=Drawme123*
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 springdoc.swagger-ui.path=/docs
